// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message when closed should render component 1`] = `
<Snackbar
  ContentProps={
    Object {
      "aria-describedby": "message-id",
    }
  }
  TransitionComponent={[Function]}
  action={
    <WithStyles(IconButton)
      aria-label="Close"
      color="inherit"
      onClick={[MockFunction]}
    >
      <pure(CloseIcon) />
    </WithStyles(IconButton)>
  }
  anchorOrigin={
    Object {
      "horizontal": "left",
      "vertical": "bottom",
    }
  }
  autoHideDuration={6000}
  classes={
    Object {
      "anchorOriginBottomCenter": "MuiSnackbar-anchorOriginBottomCenter-3",
      "anchorOriginBottomLeft": "MuiSnackbar-anchorOriginBottomLeft-7",
      "anchorOriginBottomRight": "MuiSnackbar-anchorOriginBottomRight-5",
      "anchorOriginTopCenter": "MuiSnackbar-anchorOriginTopCenter-2",
      "anchorOriginTopLeft": "MuiSnackbar-anchorOriginTopLeft-6",
      "anchorOriginTopRight": "MuiSnackbar-anchorOriginTopRight-4",
      "root": "MuiSnackbar-root-1",
    }
  }
  disableWindowBlurListener={false}
  message={
    <span
      id="message-id"
    >
      This is a test message
    </span>
  }
  onClose={[MockFunction]}
  open={false}
  transitionDuration={
    Object {
      "enter": 225,
      "exit": 195,
    }
  }
/>
`;

exports[`Message when open should render component 1`] = `
<Snackbar
  ContentProps={
    Object {
      "aria-describedby": "message-id",
    }
  }
  TransitionComponent={[Function]}
  action={
    <WithStyles(IconButton)
      aria-label="Close"
      color="inherit"
      onClick={[MockFunction]}
    >
      <pure(CloseIcon) />
    </WithStyles(IconButton)>
  }
  anchorOrigin={
    Object {
      "horizontal": "left",
      "vertical": "bottom",
    }
  }
  autoHideDuration={6000}
  classes={
    Object {
      "anchorOriginBottomCenter": "MuiSnackbar-anchorOriginBottomCenter-3",
      "anchorOriginBottomLeft": "MuiSnackbar-anchorOriginBottomLeft-7",
      "anchorOriginBottomRight": "MuiSnackbar-anchorOriginBottomRight-5",
      "anchorOriginTopCenter": "MuiSnackbar-anchorOriginTopCenter-2",
      "anchorOriginTopLeft": "MuiSnackbar-anchorOriginTopLeft-6",
      "anchorOriginTopRight": "MuiSnackbar-anchorOriginTopRight-4",
      "root": "MuiSnackbar-root-1",
    }
  }
  disableWindowBlurListener={false}
  message={
    <span
      id="message-id"
    >
      This is a test message
    </span>
  }
  onClose={[MockFunction]}
  open={true}
  transitionDuration={
    Object {
      "enter": 225,
      "exit": 195,
    }
  }
/>
`;
